add back to index button all range of the pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-　　<html>
+<html>
 　　<head>
 　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 　　　　<title>{{ page.title }}</title>
 　　</head>
 　　<body>
-
-　　　　{{ content }}
-
+	<header>
+		<a href="http://yubiaobin.github.com/">返回首页</a>
+	</header>
+	<div class="content">
+		<h1>{{ page.title }}</h1>
+		{{ content }}
+	</div>
+	<footer>
+		
+	</footer>
 　　</body>
-　　</html>
+</html>
