--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-　　<head>
-　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　　　　<title>{{ page.title }}</title>
-　　</head>
-　　<body>
-	<header>
-		<a href="http://yubiaobin.github.com/">返回首页</a>
-	</header>
+	<head>
+　　　　  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+　　　　  <title>{{ page.title }}</title>
+		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet">
+		<link href="{{ site.url }}/stylesheets/stylesheet.css" rel="stylesheet">
+		<link href="{{ site.url }}/stylesheets/pygment_trac.css.css" rel="stylesheet">
+　　 </head>
+　　 <body>
+	<!-- 引用头部代码部分 -->
+	{% include header.html %}
+
+
 	<div class="content">
 		<h1>{{ page.title }}</h1>
 		{{ content }}
-	</div>
-	<footer>
-		
-	</footer>
-　　</body>
+	</div>git
+
+	<!-- 引用底部代码部分 -->
+	{% include footer.html %}
+　　 </body>
 </html>
