--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<head>
-　　　　  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 　　　　  <title>{{ page.title }}</title>
-		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet">
-		<link href="{{ site.url }}/stylesheets/stylesheet.css" rel="stylesheet">
-		<link href="{{ site.url }}/stylesheets/pygment_trac.css.css" rel="stylesheet">
+		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet" media="print">
+		<link href="{{ site.url }}/stylesheets/stylesheet.css" rel="stylesheet" media="screen">
+		<link href="{{ site.url }}/stylesheets/pygment_trac.css.css" rel="stylesheet" media="screen">
+		<!--[if lt IE 9]>
+	    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	    <![endif]-->
 　　 </head>
 　　 <body>
-	<!-- 引用头部代码部分 -->
-	{% include header.html %}
+		<div id="container">
+	       <div class="inner">
+				<!-- 引用头部代码部分 -->
+				{% include header.html %}
 
+				
 
-	<div class="content">
-		<h1>{{ page.title }}</h1>
-		{{ content }}
-	</div>git
+				<div class="content">
+					<h1>{{ page.title }}</h1>
+					{{ content }}
+				</div>
 
-	<!-- 引用底部代码部分 -->
-	{% include footer.html %}
+				<!-- 引用底部代码部分 -->
+				{% include footer.html %}
+
+			</div>
+		</div>
 　　 </body>
 </html>
