add back images and some stylesheet

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-	<h1>Max的Blog</h1>
+	<h1>Max前端之路的点点滴滴</h1>
     <h2>It&#39;s my bolg on github（Yubiaobin.github.com）</h2>
     <section id="downloads" class="clearfix">
 		<a href="https://github.com/yubiaobin" id="view-on-github" class="button"><span>View on GitHub</span></a>
