--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 　　　　  <title>{{ page.title }}</title>
-		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet" media="print">
 		<link href="{{ site.url }}/stylesheets/stylesheet.css" rel="stylesheet" media="screen">
-		<link href="{{ site.url }}/stylesheets/pygment_trac.css.css" rel="stylesheet" media="screen">
+		<link href="{{ site.url }}/stylesheets/pygment_trac.css" rel="stylesheet" media="screen">
+		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet" media="print">
 		<!--[if lt IE 9]>
 	    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	    <![endif]-->
