--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -48,12 +48,13 @@ table {
 
 /* LAYOUT STYLES */
 body {
-  font-size: 1em;
-  line-height: 1.5; 
-  background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-  color: #6d6d6d;
+    font-size: 1em;
+    line-height: 1.5; 
+    background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
+    /*font-family: 'Helvetica Neue', Helvetica, Arial, serif;*/
+    font-family: Michroma,'Segoe UI Light','Segoe UI','Segoe UI WP','Microsoft Jhenghei','微软雅黑',sans-serif,Times;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+    color: #6d6d6d;
 }
 
 a {
@@ -64,16 +65,22 @@ a:hover {
 }
 
 header {
-  padding-top: 35px;
-  padding-bottom: 25px;
+  padding-top: 15px;
+  padding-bottom: 35px;
 }
 
 header h1 {
-  font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif; font-weight: 900;
-  letter-spacing: -1px;
-  font-size: 48px;
-  color: #303030;
-  line-height: 1.2;
+    font-weight: 900;
+    letter-spacing: -1px;
+    font-size: 48px;
+    color: #000;
+    line-height: 1.2;
+    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, 
+    color-stop(0%,rgba(0,0,0,.6)), 
+    color-stop(30%,rgba(0,0,0,.2)),
+    color-stop(50%,rgba(0,0,0,.3)), 
+    color-stop(60%,rgba(0,0,0,.6)),
+    color-stop(100%,rgba(0,0,0,1)));
 }
 
 header h2 {
@@ -99,7 +106,11 @@ header h2 {
 }
 
 #downloads {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+.downloads {
+  margin-bottom: 20px;
 }
 
 a.button {
@@ -164,8 +175,11 @@ a.button span {
 #view-on-github {
   margin-right: 0;
 }
+#back-to-index span {
+  background: transparent url(../images/go-back-icon.png) 12px 50% no-repeat;
+}
 #back-to-index {
-  margin-left:20px;
+  float:right;
 }
 
 code, pre {
@@ -372,3 +386,34 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*custom style*/
+
+.content{
+    border-top: 1px solid #bdbdbd;
+    padding-top:25px;
+}
+
+
+
+
+
+
+
+
+
+
+
