--- a/_layouts/default_index.html
+++ b/_layouts/default_index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-　　　　  <title>{{ page.title }}</title>
+　　　　  <title>Max前端之路的点点滴滴</title>
 		<link href="{{ site.url }}/stylesheets/stylesheet.css" rel="stylesheet" media="screen">
 		<link href="{{ site.url }}/stylesheets/pygment_trac.css" rel="stylesheet" media="screen">
 		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet" media="print">
@@ -18,14 +18,13 @@
 				{% include header.html %}
 
 				
-
+				<!-- 内容部分 -->
 				<div class="content">
-
-					<h1>{{ page.title }}</h1>
 
 					{{ content }}
 
 				</div>
+				
 
 				<!-- 引用底部代码部分 -->
 				{% include footer.html %}
