--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -180,6 +180,8 @@ a.button span {
 }
 #back-to-index {
   float:right;
+  width:100px;
+  margin-right:6px;
 }
 
 code, pre {
@@ -419,23 +421,38 @@ img[src="http://eiv.baidu.com/hmt/icon/21.gif"]{
   display:none;
 }
 
-
 .content{
+    position: relative;
     background: transparent url('../images/hr.png') 0 0 no-repeat;
     /*border-top: 1px solid #bdbdbd;*/
     padding-top:25px;
 }
 
+
+
+
+/*文章模板页样式*/
+.author_date{margin-top:120px;}
+.copyright{font-size:12px; margin-bottom:60px;}
+.back_to_index{
+    position: absolute;
+    top:20px;
+    right:20px;
+}
+
+
+
+/*首页列表样式*/
 .index_list li{
-  list-style:none;
-  margin:20px 0;
-  padding:10px 0;
-  background:#ededed;
+    list-style:none;
+    margin:20px 0;
+    padding:10px 0;
+    background:#ededed;
 }
 
 .index_list .index_list_date{
-  float:right;
-  padding-right:20px;
+    float:right;
+    padding-right:20px;
 }
 
 
