modified index page stylesheet

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -445,16 +445,30 @@ img[src="http://eiv.baidu.com/hmt/icon/21.gif"]{
 /*首页列表样式*/
 .index_list li{
     list-style:none;
-    margin:20px 0;
-    padding:10px 0;
+    margin:10px 0;
+    padding-left:0;
+    /*padding:10px 0;*/
     background:#ededed;
+
 }
+.index_list li a{
+    display:block; 
+    padding:10px 0 10px 20px; 
+    text-shadow:none;
+    border-radius:2px;
+}
+.index_list li a {color: #d5000d; background:#ededed} 
+.index_list li a:hover {color: #c5000c; background: #d8d8d8}
+
+
+
 
 .index_list .index_list_date{
     float:right;
     padding-right:20px;
 }
-
+.index_list li .index_list_date{color: #6d6d6d; text-shadow:none} 
+.index_list li .index_list_date:hover{color: #6d6d6d; text-shadow:none}
 
 
 
