add website keywords and description in head section

--- a/_layouts/default_post.html
+++ b/_layouts/default_post.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 　　　　  <title>{{ page.title }}</title>
+		<meta name="keywords" content="于彪斌,Maxyu,yubiaobin,github,博客,blog,技术博客,Github pages,jekyll博客">
+		<meta name="description" content="于彪斌的技术博客,maxyu的前端技术博客,分享自己的技术心得,积累前段技能,汇聚前端之路的点点滴滴。">
 		<link href="{{ site.url }}/stylesheets/stylesheet.css" rel="stylesheet" media="screen">
 		<link href="{{ site.url }}/stylesheets/pygment_trac.css" rel="stylesheet" media="screen">
 		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet" media="print">
