--- a/_layouts/default_index.html
+++ b/_layouts/default_index.html
@@ -3,12 +3,26 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Max前端之路的点点滴滴</title>
 		<meta name="keywords" content="于彪斌,Maxyu,yubiaobin,github,博客,blog,技术博客,Github pages,jekyll博客">
 		<meta name="description" content="于彪斌的技术博客,maxyu的前端技术博客,分享自己的技术心得,积累前段技能,汇聚前端之路的点点滴滴。">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Max前端之路的点点滴滴</title>
 		<link href="{{ site.url }}/stylesheets/stylesheet.css" rel="stylesheet" media="screen">
 		<link href="{{ site.url }}/stylesheets/pygment_trac.css" rel="stylesheet" media="screen">
 		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet" media="print">
+		<!-- <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
+		<!-- <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> -->
+
+		<!-- Bootstrap -->
+	    <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet">
+
+	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	    <!--[if lt IE 9]>
+	      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+	    <![endif]-->
+
 		<!--[if lt IE 9]>
 	    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	    <![endif]-->
@@ -34,13 +48,18 @@
 			</div>
 		</div>
 
+
+
+
+
+
+
 		<script src="{{ site.url }}/javascripts/main.js"></script>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 
-
-
-
-
-
+	    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	    <script src="{{ site.url }}/js/bootstrap.min.js"></script>
 
 
 　　 </body>
