--- a/_layouts/default_index.html
+++ b/_layouts/default_index.html
@@ -15,6 +15,7 @@
 
 		<!-- Bootstrap -->
 	    <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet">
+	    <link href="{{ site.url }}/css/layout.css" rel="stylesheet">
 
 	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
