--- a/_layouts/default_post.html
+++ b/_layouts/default_post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,7 +12,7 @@
 		<link href="{{ site.url }}/stylesheets/print.css" rel="stylesheet" media="print">
 
 		<!-- Bootstrap -->
-	    <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet">
+	    <!-- <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet"> -->
 	    <link href="{{ site.url }}/css/layout.css" rel="stylesheet">
 
 	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
