--- a/_layouts/default_index.html
+++ b/_layouts/default_index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="keywords" content="于彪斌,Maxyu,yubiaobin,github,博客,blog,技术博客,Github pages,jekyll博客">
+		<meta name="keywords" content="于彪斌,Maxyu,yubiaobin,github,前端博客,github博客,blog,技术博客,Github pages,jekyll博客">
 		<meta name="description" content="于彪斌的技术博客,maxyu的前端技术博客,分享自己的技术心得,积累前段技能,汇聚前端之路的点点滴滴。">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Max前端之路的点点滴滴</title>
