--- a/_layouts/default_post.html
+++ b/_layouts/default_post.html
@@ -9,13 +9,11 @@
 		<title>{{ page.title }}</title>
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
 		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
-		<link href="/stylesheets/stylesheet.css" rel="stylesheet" media="screen">
-		<link href="/stylesheets/pygment_trac.css" rel="stylesheet" media="screen">
-		<link href="/stylesheets/print.css" rel="stylesheet" media="print">
+		<link href="/css/layout.css" rel="stylesheet" media="screen">
+		<link href="/css/pygment_trac.css" rel="stylesheet" media="screen">
 
 		<!-- Bootstrap -->
 	    <!-- <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet"> -->
-	    <link href="/css/layout.css" rel="stylesheet">
 
 	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,7 +57,7 @@
 
 
 
-		<script src="/javascripts/main.js"></script>
+		<script src="/js/main.js"></script>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 	    
