--- a/_layouts/default_post.html
+++ b/_layouts/default_post.html
@@ -25,7 +25,7 @@
 					<h1>{{ page.title }}</h1>
 					<p class="copyright">（maxyu [yubiaobin1986@gmail.com] 版权所有，未经许可，请勿转载）</p>
 					<section class="downloads clearfix back_to_index">
-						<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back</span></a>
+						<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>&lt;&lt; Back</span></a>
 					</section>
 					{{ content }}
 					<p class="author_date">发表于: {{ page.date | date_to_string }}</p>
