--- a/css/layout.css
+++ b/css/layout.css
@@ -114,7 +114,15 @@ header h2 {
 }
 
 #downloads {
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
+  position: fixed;
+  right: -12px;
+  top: 52px;
+  transform:rotate(30deg);
+  -ms-transform:rotate(30deg);   /* IE 9 */
+  -moz-transform:rotate(30deg);  /* Firefox */
+  -webkit-transform:rotate(30deg); /* Safari 和 Chrome */
+  -o-transform:rotate(30deg);  /* Opera */
 }
 
 .downloads {
