--- a/css/layout.css
+++ b/css/layout.css
@@ -181,7 +181,7 @@ a.button span {
 
 
 #view-on-github span {
-  color:#d5000d;
+  color:#666;
   background: transparent url(../img/octocat-icon.png) 12px 50% no-repeat;
 }
 
