-mmodified function language blog number two

--- a/css/layout.css
+++ b/css/layout.css
@@ -407,6 +407,7 @@ img[src="http://eiv.baidu.com/hmt/icon/21.gif"]{
 }
 
 p{text-indent:2em;}
+.pege_tail{padding-top:240px;}
 
 
 .header_jekyll{color:#666;}
