--- a/css/layout.css
+++ b/css/layout.css
@@ -456,7 +456,7 @@ p{text-indent:2em;}
 /*首页列表样式*/
 .index_list li{
     list-style:none;
-    margin:10px 0;
+    margin:0;
     padding-left:0;
 }
 .index_list li a{
@@ -468,7 +468,7 @@ p{text-indent:2em;}
 }
 .index_list li a {
   color: #333; 
-  font-size:24px;
+  font-size:20px;
   /*background:#ededed;*/
   cursor:pointer;
   font-family: "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
