--- a/css/layout.css
+++ b/css/layout.css
@@ -461,6 +461,7 @@ p{text-indent:2em;}
     list-style:none;
     margin: 10px 0;
     padding-left:0;
+    text-indent: 0;
 }
 .index_list li a{
     display:block; 
