--- a/js/rubiks/css/cube.css
+++ b/js/rubiks/css/cube.css
@@ -64,7 +64,7 @@
 .cube .sticker.orange  { background: #E87000;  }
 .cube .sticker.yellow  { background: #F5B400;  }
 .cube .sticker.stickerLogo {
- background: #F3F3F3 url( "../media/rubiksLogoClassic.png" );
+ background: #F3F3F3;
  background-size: 100% 100%;
  background-repeat: none;
 }
